Enhance experience section layout and styling
Updated experience section with container and styling.

--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
     <hr>
 
     <!-- Experience Section -->
-    <section id="experience" class="py-5">
-        <h2 class="text-center">Experience</h2>
-        <div class="timeline" id="experience-list"></div>
+    <section id="experience" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">Experience</h2>
+            <div class="timeline" id="experience-list">
+                <!-- Items dynamically loaded from data.json -->
+            </div>
+        </div>
     </section>
     <hr>
 
