Refactor experience section and remove script
Updated experience section to use a new class for styling and removed mobile menu toggle script.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section id="experience" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-4">Experience</h2>
-            <div class="timeline" id="experience-list">
+            <div id="experience-list" class="experience-container">
                 <!-- Populated by script.js -->
             </div>
         </div>
@@ -114,11 +114,5 @@
 
 <!-- JS -->
 <script src="script.js"></script>
-<script>
-    // Mobile menu toggle
-    document.getElementById('menu-toggle').addEventListener('click', () => {
-        document.getElementById('sidebar').classList.toggle('active');
-    });
-</script>
 </body>
 </html>
