--- a/index.html
+++ b/index.html
@@ -1,145 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Varshaa SV</title>
-
-<!-- Bootstrap & Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-<!-- Custom CSS -->
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Varshaa - Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <a href="#about">About</a>
+    <a href="#qualification">Qualification</a>
+    <a href="#experience">Experience</a>
+    <a href="#honours">Honours</a>
+    <a href="#hobbies">Hobbies</a>
+    <a href="#languages">Languages</a>
+    <a href="#contact">Contact</a>
+  </div>
 
-<!-- Mobile menu button -->
-<button class="btn btn-primary d-md-none" id="menu-toggle" style="position: fixed; top: 10px; left: 10px; z-index: 1100;">
-    <i class="fas fa-bars"></i> Menu
-</button>
-
-<!-- Sidebar Navigation -->
-<div class="sidebar" id="sidebar">
-    <a href="#home"><i class="fas fa-home"></i> Home</a>
-    <a href="#about"><i class="fas fa-user"></i> About</a>
-    <a href="#experience"><i class="fas fa-briefcase me-2"></i> Experience</a>
-    <a href="#qualification"><i class="fas fa-graduation-cap me-2"></i> Qualification</a>
-    <a href="#skills"><i class="fas fa-chart-line"></i> Skills</a>
-    <a href="#projects"><i class="fas fa-project-diagram"></i> Projects</a>
-    <a href="#honours"><i class="fas fa-award me-2"></i> Honours & Awards</a>
-    <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
-</div>
-
-<!-- Main Content -->
-<div class="main-content" id="main-content">
+  <!-- Main content -->
+  <div class="main-content">
 
     <!-- Hero Section -->
-    <section id="home" class="hero text-center">
-        <div>
-            <h1 id="hero-name"></h1>
-            <p id="hero-icons">💻 ☕️ 🧠 ❤️</p>
-            <p id="hero-desc"></p>
-            <a href="#contact" class="btn btn-custom btn-lg mt-3">Contact Me</a>
+    <section class="hero" id="hero">
+      <div>
+        <h1 id="hero-name">Hi, I'm Varshaa</h1>
+        <p id="hero-desc" class="tagline"></p>
+        <div class="hero-buttons">
+          <a href="#about" class="btn-custom">Know More</a>
+          <a href="assets/Varshaa_Resume.pdf" class="btn-outline" download>Download Resume</a>
         </div>
+      </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="py-5">
-        <div class="container">
-            <h2 class="text-center">About Me</h2>
-            <div class="row align-items-center">
-                <div class="col-12 col-md-6">
-                    <h3>My Introduction</h3>
-                    <p id="about-description"></p>
-                </div>
-                <div class="col-12 col-md-6 text-center">
-                    <div class="row justify-content-center" id="about-stats"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <hr>
-
-    <!-- Experience Section -->
-    <section id="experience" class="py-5 bg-light">
-        <div class="container">
-            <h2 class="text-center mb-4">Experience</h2>
-            <div id="experience-list" class="experience-container"></div>
-        </div>
-    </section>
-    <hr>
-
-    <!-- Qualification Section -->
-    <section id="qualification" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Qualification</h2>
-            <div class="row" id="qualification-list"></div>
-        </div>
-    </section>
-    <hr>
-
-    <!-- Skills Section -->
-    <section id="skills" class="py-5 bg-light">
-        <div class="container">
-            <h2 class="text-center mb-4">Skills</h2>
-            <div class="row" id="skills-container"></div>
-        </div>
-    </section>
-    <hr>
-
-    <!-- Projects Section -->
-    <section id="projects" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Projects</h2>
-            <div class="row" id="projects-container"></div>
-        </div>
-    </section>
-    <hr>
-
-    <!-- Honours & Awards Section -->
-    <section id="honours" class="py-5 bg-light">
-        <div class="container">
-            <h2 class="text-center mb-4">Honours, Awards & Scholarships</h2>
-            <ul id="honours-list" class="list-group list-group-flush"></ul>
-        </div>
-    </section>
-    <hr>
-
-    <!-- Hobbies & Languages Section -->
-    <section id="hobbies-languages" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Hobbies & Languages</h2>
-            <div class="row text-center">
-                <div class="col-md-6 mb-3">
-                    <h5>Hobbies</h5>
-                    <ul id="hobbies-list" class="list-unstyled"></ul>
-                </div>
-                <div class="col-md-6 mb-3">
-                    <h5>Languages</h5>
-                    <ul id="languages-list" class="list-unstyled"></ul>
-                </div>
-            </div>
-        </div>
-    </section>
-    <hr>
-
-    <!-- Contact Section -->
-    <section id="contact" class="py-5 bg-light">
-        <div class="container">
-            <h2 class="text-center mb-4">Contact Me</h2>
-            <div class="contact-details mb-4 text-center" id="contact-info"></div>
-        </div>
+    <!-- About -->
+    <section id="about" class="section">
+      <h2>About Me</h2>
+      <div class="about-card">
+        <div id="about-description"></div>
+      </div>
     </section>
 
-</div>
+    <!-- Qualification -->
+    <section id="qualification" class="section">
+      <h2>Qualifications</h2>
+      <div id="qualification-list" class="timeline"></div>
+    </section>
 
-<!-- Footer -->
-<footer class="text-center">
-    <p>© 2025 Varshaa | AI Developer | <a href="#contact">Contact Me</a></p>
-</footer>
+    <!-- Experience -->
+    <section id="experience" class="section">
+      <h2>Experience</h2>
+      <div id="experience-list" class="experience-container"></div>
+    </section>
 
-<!-- JS -->
-<script src="script.js"></script>
+    <!-- Honours -->
+    <section id="honours" class="section">
+      <h2>Honours, Awards & Scholarships</h2>
+      <ul id="honours-list"></ul>
+    </section>
+
+    <!-- Hobbies -->
+    <section id="hobbies" class="section">
+      <h2>Hobbies</h2>
+      <ul id="hobbies-list"></ul>
+    </section>
+
+    <!-- Languages -->
+    <section id="languages" class="section">
+      <h2>Languages</h2>
+      <ul id="languages-list"></ul>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="section">
+      <h2>Contact</h2>
+      <div id="contact-info"></div>
+    </section>
+
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
