--- a/index.html
+++ b/index.html
@@ -1,84 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Varshaa - Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Varshaa Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap CSS (Optional for styling) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- FontAwesome (for icons) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <!-- Sidebar -->
-  <div class="sidebar">
-    <a href="#about">About</a>
-    <a href="#qualification">Qualification</a>
-    <a href="#experience">Experience</a>
-    <a href="#honours">Honours</a>
-    <a href="#hobbies">Hobbies</a>
-    <a href="#languages">Languages</a>
-    <a href="#contact">Contact</a>
-  </div>
 
-  <!-- Main content -->
-  <div class="main-content">
+<!-- Hero Section -->
+<section id="home" class="hero text-center py-5 bg-light">
+    <div>
+        <h1>Welcome, I'm Varshaa</h1>
+        <p>💻 ☕️ 🧠 ❤️</p>
+        <p>25 | Software Engineer | Data Engineering, Management and Governance Senior Analyst | Full-Stack Engineer | Artificial Intelligence</p>
+        <a href="#contact" class="btn btn-custom btn-lg">Contact Me</a>
+    </div>
+</section>
 
-    <!-- Hero Section -->
-    <section class="hero" id="hero">
-      <div>
-        <h1 id="hero-name">Hi, I'm Varshaa</h1>
-        <p id="hero-desc" class="tagline"></p>
-        <div class="hero-buttons">
-          <a href="#about" class="btn-custom">Know More</a>
-          <a href="assets/Varshaa_Resume.pdf" class="btn-outline" download>Download Resume</a>
+<!-- About Section -->
+<section id="about" class="py-5">
+    <div class="container">
+        <h2 class="text-center">About Me</h2>
+        <div class="row align-items-center">
+            <!-- Left Column: Icon and Description -->
+            <div class="col-lg-6">
+                <h3>My Introduction </h3>
+                <p></p>
+                <p></p>
+                <p></p>
+                <a href="#contact" class="btn btn-primary mt-3">Contact Me</a>
+            </div>
+
+            <!-- Right Column: Experience & Stats -->
+            <div class="col-lg-6">
+                <div class="row text-center">
+                    <div class="col-6 mb-4">
+                        <div class="card shadow-sm p-4">
+                            <h1 class="display-4 text-primary">03+</h1>
+                            <p class="text-muted">Years XP</p>
+                        </div>
+                    </div>
+                    <div class="col-6 mb-4">
+                        <div class="card shadow-sm p-4">
+                            <h1 class="display-4 text-success">3+</h1>
+                            <p class="text-muted">Projects Completed</p>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="card shadow-sm p-4">
+                            <a href="resume.pdf" class="btn btn-outline-success mt-3" download>
+                                <i class="fas fa-download"></i> Get Resume
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </section>
+    </div>
+</section>
+<hr>
 
-    <!-- About -->
-    <section id="about" class="section">
-      <h2>About Me</h2>
-      <div class="about-card">
-        <div id="about-description"></div>
-      </div>
-    </section>
+<!-- Experience Section -->
+<section id="experience" class="py-5">
+    <h2 class="text-center">Experience</h2>
+    <div class="timeline container"></div>
+</section>
+<hr>
 
-    <!-- Qualification -->
-    <section id="qualification" class="section">
-      <h2>Qualifications</h2>
-      <div id="qualification-list" class="timeline"></div>
-    </section>
+<!-- Qualification Section -->
+<section id="qualification" class="py-5">
+    <h2 class="text-center">Qualification</h2>
+    <div class="timeline container"></div>
+</section>
+<hr>
 
-    <!-- Experience -->
-    <section id="experience" class="section">
-      <h2>Experience</h2>
-      <div id="experience-list" class="experience-container"></div>
-    </section>
+<!-- Skills Section -->
+<section id="skills" class="py-5">
+    <div class="container">
+        <h2 class="text-center">Skills</h2>
+        <div class="row"></div>
+    </div>
+</section>
+<hr>
 
-    <!-- Honours -->
-    <section id="honours" class="section">
-      <h2>Honours, Awards & Scholarships</h2>
-      <ul id="honours-list"></ul>
-    </section>
+<!-- Projects Section -->
+<section id="projects" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center">Projects</h2>
+        <div class="row"></div>
+    </div>
+</section>
+<hr>
 
-    <!-- Hobbies -->
-    <section id="hobbies" class="section">
-      <h2>Hobbies</h2>
-      <ul id="hobbies-list"></ul>
-    </section>
+<!-- Contact Section -->
+<section id="contact" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center">Contact Me</h2>
+        <div class="contact-details text-center"></div>
+    </div>
+</section>
 
-    <!-- Languages -->
-    <section id="languages" class="section">
-      <h2>Languages</h2>
-      <ul id="languages-list"></ul>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="section">
-      <h2>Contact</h2>
-      <div id="contact-info"></div>
-    </section>
-
-  </div>
-
-  <script src="script.js"></script>
+<!-- JS -->
+<script src="script.js"></script>
 </body>
 </html>
