--- a/index.html
+++ b/index.html
@@ -1,124 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Varshaa Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Bootstrap CSS (Optional for styling) -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- FontAwesome (for icons) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Varshaa - Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
 <!-- Sidebar -->
-<div id="sidebar" class="sidebar">
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#qualification">Qualification</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
+<div class="sidebar">
+  <a href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#experience">Experience</a>
+  <a href="#qualification">Qualification</a>
+  <a href="#skills">Skills</a>
+  <a href="#projects">Projects</a>
+  <a href="#honours">Honours</a>
+  <a href="#hobbies">Hobbies</a>
+  <a href="#languages">Languages</a>
+  <a href="#contact">Contact</a>
 </div>
 
+<!-- Main Content -->
+<div class="main-content">
 
-<!-- Hero Section -->
-<section id="home" class="hero text-center py-5 bg-light">
+  <!-- Hero Section -->
+  <section id="home" class="hero">
     <div>
-        <h1>Welcome, I'm Varshaa</h1>
-        <p>💻 ☕️ 🧠 ❤️</p>
-        <p>25 | Software Engineer | Data Engineering, Management and Governance Senior Analyst | Full-Stack Engineer | Artificial Intelligence</p>
-        <a href="#contact" class="btn btn-custom btn-lg">Contact Me</a>
+      <h1></h1>
+      <p class="emoji"></p>
+      <p class="tagline"></p>
+      <p class="title"></p>
+      <a href="#contact" class="btn btn-custom btn-lg">Contact Me</a>
     </div>
-</section>
+  </section>
 
-<!-- About Section -->
-<section id="about" class="py-5">
-    <div class="container">
-        <h2 class="text-center">About Me</h2>
-        <div class="row align-items-center">
-            <!-- Left Column: Icon and Description -->
-            <div class="col-lg-6">
-                <h3>My Introduction </h3>
-                <p></p>
-                <p></p>
-                <p></p>
-                <a href="#contact" class="btn btn-primary mt-3">Contact Me</a>
-            </div>
+  <!-- About Section -->
+  <section id="about" class="section">
+    <h2>About Me</h2>
+    <p id="about-description"></p>
+  </section>
 
-            <!-- Right Column: Experience & Stats -->
-            <div class="col-lg-6">
-                <div class="row text-center">
-                    <div class="col-6 mb-4">
-                        <div class="card shadow-sm p-4">
-                            <h1 class="display-4 text-primary">03+</h1>
-                            <p class="text-muted">Years XP</p>
-                        </div>
-                    </div>
-                    <div class="col-6 mb-4">
-                        <div class="card shadow-sm p-4">
-                            <h1 class="display-4 text-success">3+</h1>
-                            <p class="text-muted">Projects Completed</p>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="card shadow-sm p-4">
-                            <a href="resume.pdf" class="btn btn-outline-success mt-3" download>
-                                <i class="fas fa-download"></i> Get Resume
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<hr>
+  <!-- Experience Section -->
+  <section id="experience" class="section">
+    <h2>Experience</h2>
+    <div id="experience-list" class="timeline"></div>
+  </section>
 
-<!-- Experience Section -->
-<section id="experience" class="py-5">
-    <h2 class="text-center">Experience</h2>
-    <div class="timeline container"></div>
-</section>
-<hr>
+  <!-- Qualification Section -->
+  <section id="qualification" class="section">
+    <h2>Qualification</h2>
+    <div id="qualification-list" class="timeline"></div>
+  </section>
 
-<!-- Qualification Section -->
-<section id="qualification" class="py-5">
-    <h2 class="text-center">Qualification</h2>
-    <div class="timeline container"></div>
-</section>
-<hr>
+  <!-- Skills Section -->
+  <section id="skills" class="section">
+    <h2>Skills</h2>
+    <div id="skills-container" class="skills-container"></div>
+  </section>
 
-<!-- Skills Section -->
-<section id="skills" class="py-5">
-    <div class="container">
-        <h2 class="text-center">Skills</h2>
-        <div class="row"></div>
-    </div>
-</section>
-<hr>
+  <!-- Projects Section -->
+  <section id="projects" class="section">
+    <h2>Projects</h2>
+    <div id="projects-container" class="projects-container"></div>
+  </section>
 
-<!-- Projects Section -->
-<section id="projects" class="py-5 bg-light">
-    <div class="container">
-        <h2 class="text-center">Projects</h2>
-        <div class="row"></div>
-    </div>
-</section>
-<hr>
+  <!-- Honours / Awards / Scholarships -->
+  <section id="honours" class="section">
+    <h2>Honours, Awards & Scholarships</h2>
+    <ul id="honours-list"></ul>
+  </section>
 
-<!-- Contact Section -->
-<section id="contact" class="py-5 bg-light">
-    <div class="container">
-        <h2 class="text-center">Contact Me</h2>
-        <div class="contact-details text-center"></div>
-    </div>
-</section>
+  <!-- Hobbies Section -->
+  <section id="hobbies" class="section">
+    <h2>Hobbies</h2>
+    <ul id="hobbies-list"></ul>
+  </section>
 
-<!-- JS -->
+  <!-- Languages Section -->
+  <section id="languages" class="section">
+    <h2>Languages</h2>
+    <ul id="languages-list"></ul>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="section">
+    <h2>Contact</h2>
+    <div id="contact-info"></div>
+  </section>
+
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
