--- a/index.html
+++ b/index.html
@@ -1,95 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Varshaa Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Varshaa Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- Sidebar -->
-    <nav id="sidebar">
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#honours">Honours</a></li>
-            <li><a href="#hobbies">Hobbies</a></li>
-            <li><a href="#languages">Languages</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
 
-    <div class="main-content">
-        <!-- Home / Hero Section -->
-        <section id="home" class="hero">
-            <h1 id="hero-name"></h1>
-            <p id="hero-tagline"></p>
-            <p id="hero-roles"></p>
-            <a href="#contact" class="btn">Contact Me</a>
-        </section>
+<!-- Sidebar -->
+<nav id="sidebar">
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#experience">Experience</a></li>
+    <li><a href="#education">Education</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#honours">Honours</a></li>
+    <li><a href="#hobbies">Hobbies</a></li>
+    <li><a href="#languages">Languages</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
 
-        <!-- About Section -->
-        <section id="about">
-            <h2>About Me</h2>
-            <p id="about-intro"></p>
-            <p id="about-details"></p>
-            <p id="about-cta"></p>
-        </section>
+<!-- Hero Section -->
+<section id="home" class="hero">
+  <div class="hero-content">
+    <h1 id="name"></h1>
+    <p id="tagline"></p>
+    <p id="roles"></p>
+    <button class="btn btn-contact" onclick="scrollToContact()">Let's Connect</button>
+  </div>
+</section>
 
-        <!-- Experience Section -->
-        <section id="experience">
-            <h2>Experience</h2>
-            <div id="experience-list"></div>
-        </section>
+<!-- About Section -->
+<section id="about" class="section">
+  <h2>About Me</h2>
+  <p id="description_intro"></p>
+  <p id="description_details"></p>
+  <p id="cta"></p>
+  <a href="#contact" class="btn btn-primary">Contact Me</a>
+</section>
 
-        <!-- Education Section -->
-        <section id="education">
-            <h2>Education</h2>
-            <div id="education-list"></div>
-        </section>
+<!-- Experience Section -->
+<section id="experience" class="section">
+  <h2>Experience</h2>
+  <div id="experience-list" class="timeline"></div>
+</section>
 
-        <!-- Skills Section -->
-        <section id="skills">
-            <h2>Skills</h2>
-            <div id="skills-list"></div>
-        </section>
+<!-- Education Section -->
+<section id="education" class="section">
+  <h2>Education</h2>
+  <div id="education-list" class="timeline"></div>
+</section>
 
-        <!-- Projects Section -->
-        <section id="projects">
-            <h2>Projects</h2>
-            <div id="projects-list"></div>
-        </section>
+<!-- Skills Section -->
+<section id="skills" class="section">
+  <h2>Skills</h2>
+  <div id="skills-list" class="skills-grid"></div>
+</section>
 
-        <!-- Honours Section -->
-        <section id="honours">
-            <h2>Honours & Awards</h2>
-            <ul id="honours-list"></ul>
-        </section>
+<!-- Projects Section -->
+<section id="projects" class="section">
+  <h2>Projects</h2>
+  <div id="projects-list" class="projects-grid"></div>
+</section>
 
-        <!-- Hobbies Section -->
-        <section id="hobbies">
-            <h2>Hobbies</h2>
-            <ul id="hobbies-list"></ul>
-        </section>
+<!-- Honours Section -->
+<section id="honours" class="section">
+  <h2>Honours & Awards</h2>
+  <ul id="honours-list" class="honours-grid"></ul>
+</section>
 
-        <!-- Languages Section -->
-        <section id="languages">
-            <h2>Languages</h2>
-            <ul id="languages-list"></ul>
-        </section>
+<!-- Hobbies Section -->
+<section id="hobbies" class="section">
+  <h2>Hobbies</h2>
+  <ul id="hobbies-list" class="hobbies-grid"></ul>
+</section>
 
-        <!-- Contact Section -->
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <p>Email: <span id="contact-email"></span></p>
-            <p>Phone: <span id="contact-phone"></span></p>
-            <p>Location: <span id="contact-location"></span></p>
-        </section>
-    </div>
+<!-- Languages Section -->
+<section id="languages" class="section">
+  <h2>Languages</h2>
+  <div id="languages-list" class="languages-grid"></div>
+</section>
+
+<!-- Contact Section -->
+<section id="contact" class="section contact">
+  <h2>Contact Me</h2>
+  <p><strong>Email:</strong> <a id="email" href=""></a></p>
+  <p><strong>Phone:</strong> <a id="phone" href=""></a></p>
+  <p><strong>Location:</strong> <span id="location"></span></p>
+</section>
+
+<script src="script.js"></script>
 </body>
 </html>
