--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
 <!-- Honours Section -->
 <section id="honours" class="section">
   <h2>Honours & Awards</h2>
-  <ul id="honours-list" class="honours-grid"></ul>
+  <div id="honours-list" class="honours-grid"></div>
 </section>
 
 <!-- Hobbies Section -->
 <section id="hobbies" class="section">
   <h2>Hobbies</h2>
-  <ul id="hobbies-list" class="hobbies-grid"></ul>
+  <div id="hobbies-list" class="hobbies-grid"></div>
 </section>
 
 <!-- Languages Section -->
 <section id="languages" class="section">
   <h2>Languages</h2>
-  <div id="languages-list" class="languages-grid"></div>
+  <div id="languages-list" class="languages-vertical"></div>
 </section>
 
 <!-- Contact Section -->
