--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p id="description_intro"></p>
       <p id="description_details"></p>
       <button id="lets-connect">Let's Connect</button>
-      <a id="btn-resume" class="btn-resume" href="#" target="_blank">Download Resume</a>
+      <a id="btn-resume" class="btn-resume" href="assets/Varshaa_Resume.pdf" target="_blank">Download Resume</a>
     </section>
 
     <!-- Experience -->
