--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       <p>Email: <span id="email"></span></p>
       <p>Phone: <span id="phone"></span></p>
       <p>Location: <span id="location"></span></p>
+      <p id="footer-note">*References will be provided upon request.</p>
     </section>
 
   </div>
